# physical-ai-and-humanoids-robotics

./: .env.example  .gitignore  README.md  README_i18n.md  TRANSLATION_README.md  docusaurus.config.js  package-lock.json  package.json  railway.json  sidebars.js  tailwind.config.js  temp_feature_description.txt  translate_docs.py  translation_progress.json
.claude/agents/: api-endpoint-designer.md  backend-architect.md  frontend-experience-agent.md  system-orchestrator.md
.claude/skills/: auth-user-context-skill.md  content-personalization-skill.md  fastapi-architecture-skill.md  rag-design-skill.md  urdu-translation-skill.md  vector-database-qdrant-skill.md
.specify/memory/: constitution.md  hackathon-constitution.md  multilingual-chatbot-constitution.md  rag-chatbot-constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
backend/: .gitignore  README.md  agent.py  main.py  pyproject.toml  retrieving.py  scrapper.py
docs/: changelog.md  glossary.md  hardware-guide.md  instructor-guide.md  intro.md
docs/module-0-getting-started/: chapter-0-1.md  chapter-0-2.md  chapter-0-3.md  index.md
docs/module-1-ros2/: chapter-1-1.md  chapter-1-2.md  chapter-1-3.md  chapter-1-4.md  chapter-1-5.md  chapter-1-6.md  index.md
docs/module-2-digital-twin/: chapter-2-1.md  chapter-2-2.md  chapter-2-3.md  chapter-2-4.md  chapter-2-5.md  chapter-2-6.md  index.md
docs/module-3-isaac/: chapter-3-1.md  chapter-3-2.md  chapter-3-3.md  chapter-3-4.md  chapter-3-5.md  chapter-3-6.md  index.md
docs/module-4-vla/: chapter-4-1.md  chapter-4-2.md  (+4 more)
(+138 files in other folders)
